--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,9 @@ android {
 }
 
 dependencies {
+
+    api project(":sceneformux")
+
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -42,5 +45,4 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     // Provides ARCore Session and related resources.
     implementation 'com.google.ar:core:1.36.0'
-    implementation 'io.github.sceneview:arsceneview:0.9.8'
 }
